--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
+  "devCommand": "uvicorn main:app --port 3000",
   "builds": [
     {
       "src": "api/app.py",
